@@ -34,6 +34,7 @@
     <File name="./src/Makefile.am" subtype="Code" buildaction="Nothing" />
     <File name="./BUGS" subtype="Code" buildaction="Nothing" />
     <File name="./TODO" subtype="Code" buildaction="Nothing" />
+    <File name="./src/VolumeFade.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
